--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tanstack/vue-query": "^4.36.2",
     "@vee-validate/yup": "^4.12.4",
+    "@vueform/slider": "^2.1.10",
     "axios": "1.6.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
