--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_API_URL=https://examle.com/api/
-VITE_BASE_MEDIA_URL=http://examle.com
+VITE_BASE_API_URL=http://localhost:5023/api/
+VITE_BASE_MEDIA_URL=http://localhost:5023/media/
 VITE_CORS=*
