--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_API_URL=http://localhost:5023/api/
-VITE_BASE_MEDIA_URL=http://localhost:5023/media/
+VITE_BASE_API_URL=http://5.35.93.135:5374/api/
+VITE_BASE_MEDIA_URL=http://5.35.93.135:5374/media/
 VITE_CORS=*
